--- a/my-dogapp/src/app/header/header.component.html
+++ b/my-dogapp/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header>
-  My Dog App
+  <img src="assets/img/dogLogo.png" alt="Dog logo, Continental bulldog" class="header-logo" />
+  <h2 class="header-title">My Dog App</h2>
 </header>
 
 
