--- a/my-dogapp/src/app/dog-card/dog-card.component.html
+++ b/my-dogapp/src/app/dog-card/dog-card.component.html
@@ -1,5 +1,11 @@
+
+
 <div class="card">
-  <img src="assets/img/dog/dog1.jpg" alt="hund, labrador hechelt und schaut nach oben" />
-  <h3>Marlo</h3>
-  <p>Hallo, ich suche ein neues Zuhause!</p>
+  <img src="{{ cardFoto }}" />
+  <h3>{{ cardTitle }}</h3>
+  <p>{{ cardDescription }}</p>
+  <button>Like</button>
+  <button>Nachricht</button>
 </div>
+
+
