--- a/my-dogapp/src/app/dog-card/dog-card.component.scss
+++ b/my-dogapp/src/app/dog-card/dog-card.component.scss
@@ -1,11 +1,14 @@
+
 .card {
-  min-height: 400px;
-  width: 300px;
+  min-height: 350px;
+  width: 250px;
   background-color: #fff;
   border: 1px solid #000;
   box-shadow: 0 0 10px #000;
   border-radius: 10px;
   overflow: hidden;
+  position: relative;
+  margin: 10px;
   img {
     width: 100%;
     object-fit: cover;
@@ -16,9 +19,30 @@
   p {
     padding: 0px 10% 0px 10%;
   }
-  
+button {
+    width: 50%;
+    position: absolute;
+    bottom: 0;
+    height: 30px;
+    background-color: transparent;
+    border: unset;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+
+    &:first-child {
+      left: 0;
+    }
+    &:last-child {
+      right: 0;
+      border-left: 1px solid rgba(0, 0, 0, 0.3);
+    }
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.3);
+    }
+  }
   @media (min-width: 768px) {
     width: 300px;
   }
 
   }
+  
