added new component and styles

--- a/my-dogapp/src/app/app.component.css
+++ b/my-dogapp/src/app/app.component.css
@@ -1,3 +1,9 @@
+.flex-row {
+  display: flex;
+  justify-content: center;
+  padding: 40px 0 0 10%;
+}
+
 .container-card {
-  padding: 30px 0 0 10%;
+  margin-right: 30px;
 }
