--- a/my-dogapp/src/app/proposals/proposals.component.css
+++ b/my-dogapp/src/app/proposals/proposals.component.css
@@ -1,6 +1,16 @@
+.proposals-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+  border-radius: 15px;
+  padding: 10px;
+}
+
 .proposals-container img {
   width: 60px;
   height: 60px;
+  margin-right: 10px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center;
