--- a/my-dogapp/src/app/proposals/proposals.component.scss
+++ b/my-dogapp/src/app/proposals/proposals.component.scss
@@ -1,8 +1,15 @@
 .proposals-container {
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+  border: 1px solid #000;
+  border-radius: 15px;
+  padding: 10px;
 
   img {
     width: 60px;
     height: 60px;
+    margin-right: 10px;
     border-radius: 50%;
     object-fit: cover;
     object-position: center; 
