added styles on new component of proposals

--- a/my-dogapp/src/app/proposals/proposals.component.css
+++ b/my-dogapp/src/app/proposals/proposals.component.css
@@ -12,6 +12,12 @@
   height: 60px;
   margin-right: 10px;
   border-radius: 50%;
+  box-shadow: 0 0 10px #000;
   object-fit: cover;
   object-position: center;
+}
+
+.proposals-container .proposals-span {
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.3);
 }
