--- a/my-dogapp/src/app/proposals/proposals.component.html
+++ b/my-dogapp/src/app/proposals/proposals.component.html
@@ -1,4 +1,8 @@
 <div class="proposals-container">
   <img src="assets/img/dog/dog6.jpg" />
-  <p><b>Leonardo</b></p>
+  <div>
+    <p><b>Leonardo</b></p>
+    <span class="proposals-span">2 Jahre Alt</span>
+  </div>
+  
 </div>
