--- a/my-dogapp/src/styles.css
+++ b/my-dogapp/src/styles.css
@@ -4,6 +4,6 @@ body {
   background-color: rgba(0, 0, 0, 0.05);
 }
 
-body h1, body h2, body h3, body h4, body h5, body h6, body p {
+body h1, body h2, body h3, body h4, body h5, body h6, body p, body span {
   margin: 0;
 }
