added styles responsive, when display 668px proposals none

--- a/my-dogapp/src/app/proposals/proposals.component.css
+++ b/my-dogapp/src/app/proposals/proposals.component.css
@@ -21,3 +21,9 @@
   font-size: 10px;
   color: rgba(0, 0, 0, 0.3);
 }
+
+@media (max-width: 668px) {
+  .proposals-container {
+    display: none;
+  }
+}
