added new component and styles - when display 600px its not working

--- a/my-dogapp/src/app/proposals/proposals.component.html
+++ b/my-dogapp/src/app/proposals/proposals.component.html
@@ -1,8 +1,4 @@
-<div class="proposals-container">
-  <img src="assets/img/dog/dog6.jpg" />
-  <div>
-    <p><b>Leonardo</b></p>
-    <span class="proposals-span">2 Jahre Alt</span>
-  </div>
-  
+<div class="proposalsCont">
+  <app-profile-row></app-profile-row>
+<p><b>Freundesvorschläge</b></p>
 </div>
