added   imports: [CommonModule, RouterOutlet, HeaderComponent, DogCardComponent, ProposalsComponent, ProfileRowComponent to solve an import proplem

--- a/my-dogapp/src/app/profile-row/profile-row.component.html
+++ b/my-dogapp/src/app/profile-row/profile-row.component.html
@@ -1,8 +1,9 @@
 <div class="proposals-container">
-  <img src="assets/img/dog/dog6.jpg" />
+
+  <img src="{{ frindshipImgs }}" />
   <div>
-    <p><b>Leonardo</b></p>
-    <span class="proposals-span">2 Jahre Alt</span>
+    <p><b>{{ name }}</b></p>
+    <span class="proposals-span">{{ texts }}</span>
   </div>
   
 </div>
