--- a/my-dogapp/src/app/profile-row/profile-row.component.css
+++ b/my-dogapp/src/app/profile-row/profile-row.component.css
@@ -6,6 +6,8 @@
   border-radius: 15px;
   padding: 10px;
   margin-right: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .proposals-container img {
