--- a/my-dogapp/src/app/proposals/proposals.component.html
+++ b/my-dogapp/src/app/proposals/proposals.component.html
@@ -1,4 +1,4 @@
 <div class="proposalsCont">
-  <app-profile-row></app-profile-row>
-<p><b>Freundesvorschläge</b></p>
+<p><b>Neu Angekommen</b></p>
+<app-profile-row *ngFor="let i of [0, 1, 2, 3]" [frindshipImgs]="frindshipImgs[i]" [name]="name[i]" [texts]="texts[i]"></app-profile-row> 
 </div>
