--- a/my-dogapp/src/app/profile-row/profile-row.component.scss
+++ b/my-dogapp/src/app/profile-row/profile-row.component.scss
@@ -23,6 +23,9 @@
     color: rgba($color: #000000, $alpha: 0.3);
     
   }
+  &:hover {
+    box-shadow: 0 0 10px #000;
+  }
   @media (max-width: 668px) {
     display: none;
   }
