--- a/my-dogapp/src/app/profile-row/profile-row.component.scss
+++ b/my-dogapp/src/app/profile-row/profile-row.component.scss
@@ -9,6 +9,7 @@
   margin-bottom: 10px;
   margin-top:10px;
   background-color: #fff;
+  cursor: pointer;
 
   img {
     width: 60px;
@@ -21,8 +22,7 @@
   }
   .proposals-span {
     font-size: 10px;
-    color: rgba($color: #000000, $alpha: 0.3);
-    
+    color: rgba($color: #000000, $alpha: 0.3); 
   }
   &:hover {
     box-shadow: 0 0 10px #000;
