--- a/my-dogapp/src/app/header/header.component.html
+++ b/my-dogapp/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <img src="assets/img/dogLogo.png" alt="Dog logo, Continental bulldog" class="header-logo" />
-  <h2 class="header-title">My Dog App</h2>
+  <h2 class="header-title"><code>M</code>y <code>D</code>og <code>A</code>pp</h2>
 </header>
 
 
