--- a/my-dogapp/src/app/header/header.component.scss
+++ b/my-dogapp/src/app/header/header.component.scss
@@ -17,3 +17,12 @@ header {
   letter-spacing: 3px;
   text-shadow: 0 0 1px red;
 }
+code {
+  background-color: red;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid blue;
+  border-radius: 12px 0 12px 0;
+  box-shadow: 0 0 10px red;
+  align-items: center;
+}
