added new styles

--- a/my-dogapp/src/app/frindbox/frindbox.component.html
+++ b/my-dogapp/src/app/frindbox/frindbox.component.html
@@ -1,6 +1,7 @@
 <div class="cardFrind frindRow">
   <div class="frind" *ngFor="let i of [0, 1, 2, 3]">
     <img src="{{ frindshipImgs[i] }}" />
-    {{ name[i] }}
+    <p>{{ name[i] }}</p>
+    
   </div>
 </div>
