--- a/my-dogapp/src/app/profile-row/profile-row.component.css
+++ b/my-dogapp/src/app/profile-row/profile-row.component.css
@@ -31,6 +31,21 @@
   box-shadow: 0 0 10px #000;
 }
 
+.proposals-container .name {
+  width: 80px;
+}
+
+.proposals-container a {
+  font-size: 12px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.proposals-container a:hover {
+  color: blue;
+  border-bottom: 1px solid blue;
+}
+
 @media (max-width: 668px) {
   .proposals-container {
     display: none;
