--- a/my-dogapp/src/app/profile-row/profile-row.component.scss
+++ b/my-dogapp/src/app/profile-row/profile-row.component.scss
@@ -27,6 +27,18 @@
   &:hover {
     box-shadow: 0 0 10px #000;
   }
+  .name {
+    width: 80px;
+  }
+  a {
+    font-size: 12px;
+    margin: 10px;
+    cursor: pointer;
+    &:hover {
+      color: blue;
+      border-bottom: 1px solid blue;
+    }
+  }
   @media (max-width: 668px) {
     display: none;
   }
