added card button logic and style when like

--- a/my-dogapp/src/app/dog-card/dog-card.component.html
+++ b/my-dogapp/src/app/dog-card/dog-card.component.html
@@ -1,8 +1,8 @@
-<div class="card">
+<div class="card" [style.border]="liked ? '1px solid red' : ''">
   <img src="{{ cardFoto }}" />
   <h3>{{ cardTitle }}</h3>
   <p>{{ cardDescription }}</p>
-  <button>Like</button>
+  <button [style.backgroundColor]="liked ? '#0165e1' : ''" (click)="toggleLike()" >{{ liked ? '💓' : '💔' }}</button>
   <button>Nachricht</button>
 </div>
 
