added new dog diego and delet the nav on the header

--- a/my-dogapp/src/app/proposals/proposals.component.html
+++ b/my-dogapp/src/app/proposals/proposals.component.html
@@ -1,7 +1,7 @@
 <div class="proposalsCont">
 <p><b>Neu Angekommen</b></p>
 <app-profile-row 
-*ngFor="let i of [0, 1, 2, 3]" 
+*ngFor="let i of [0, 1, 2, 3, 4]" 
 [frindshipImgs]="frindshipImgs[i]" 
 [name]="name[i]" [texts]="texts[i]"
 ></app-profile-row> 
