--- a/my-dogapp/src/app/frindbox/frindbox.component.scss
+++ b/my-dogapp/src/app/frindbox/frindbox.component.scss
@@ -17,11 +17,15 @@
 
   @media (min-width: 768px) {
     width: 70%;
+  
   }
   }
     .frindRow{
       display: flex;
       color: #00000038;
+      @media (max-width: 668px) {
+        display: none;
+      }
     }
   .frind {
 
@@ -37,6 +41,7 @@
       text-align: center;
       color: #0f0f0f46;
     }  
+    
     
   }
   
