--- a/my-dogapp/src/app/header/header.component.css
+++ b/my-dogapp/src/app/header/header.component.css
@@ -6,6 +6,30 @@ header {
   background-color: #fff;
 }
 
+.nav-container {
+  margin-left: 25%;
+}
+
+nav a {
+  margin: 10px;
+  border: 1px solid #000;
+  padding: 5px;
+  border-radius: 10px 0 10px 0;
+  box-shadow: 0 0 10px #000;
+}
+
+nav a:hover {
+  cursor: pointer;
+  padding: 5px;
+  border: 1px solid red;
+}
+
+@media (max-width: 668px) {
+  nav a {
+    display: none;
+  }
+}
+
 .header-logo {
   width: 70px;
   height: 80px;
@@ -17,14 +41,4 @@ header {
   font-style: italic;
   letter-spacing: 3px;
   text-shadow: 0 0 1px red;
-}
-
-code {
-  background-color: red;
-  padding: 10px;
-  margin: 5px;
-  border: 1px solid blue;
-  border-radius: 12px 0 12px 0;
-  box-shadow: 0 0 10px red;
-  align-items: center;
 }
