--- a/my-dogapp/src/app/header/header.component.html
+++ b/my-dogapp/src/app/header/header.component.html
@@ -1,5 +1,10 @@
 <header>
   <img src="assets/img/dogLogo.png" alt="Dog logo, Continental bulldog" class="header-logo" />
-  <h2 class="header-title"><code>M</code>y Dog App</h2>
-  
+  <h2 class="header-title">My Dog App</h2>
+  <div class="nav-container">
+    <nav>
+      <a>Home</a>
+      <a>About</a>
+    </nav>
+  </div>
 </header>
