--- a/my-dogapp/src/app/header/header.component.scss
+++ b/my-dogapp/src/app/header/header.component.scss
@@ -4,7 +4,32 @@ header {
   align-items: center;
   box-shadow: 2px 2px 2px #444;
   background-color: #fff;
+
+  
 }
+.nav-container {
+  margin-left: 20%;
+}
+nav a {
+    margin: 10px;
+    border: 1px solid #000;
+    padding: 5px;
+    border-radius: 10px 0 10px 0;
+    box-shadow: 0 0 10px #0000005d;
+
+    letter-spacing: 2px;
+    
+    &:hover {
+    cursor: pointer;
+    padding: 5px;
+    border: 1px solid red;
+    box-shadow: 0 0 10px #2704ebb4;
+   }
+   @media (max-width: 668px) {
+    display: none;
+  }
+  }
+
 
 .header-logo {
   width: 70px;
@@ -19,12 +44,3 @@ header {
   text-shadow: 0 0 1px red;
 }
 
-code {
-  background-color: red;
-  padding: 10px;
-  margin: 5px;
-  border: 1px solid blue;
-  border-radius: 12px 0 12px 0;
-  box-shadow: 0 0 10px red;
-  align-items: center;
-}
